# fanLens

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cscope.files  fanBufferObject.h  fanCamera.cpp  fanCamera.h  fanFiller.h  fanFilm.cpp  fanFilm.h  fanLens.cpp  fanLens.h  fanLensMovement.cpp  fanLensMovement.h  fanLight.cpp  fanLight.h  fanMaterial.h  fanMatrix.h  fanObject.cpp  fanObject.h  fanPixel.cpp  fanPixel.h  fanScanner.h  fanScene.h  fanTexture.h  fanTriangle.cpp  fanTriangle.h  fanTriangleMesh.cpp  fanTriangleMesh.h  fanTriple.h  fanVector.h  fanVector3.h
src/algo/clip/: CohenSutherland.cpp  CohenSutherland.h  EdgeCode.cpp  EdgeCode.h
src/algo/rasterize/: fanLineGenerator.cpp  fanLineGenerator.h  fanScanLineGenerator.h
src/algo/rasterize/line_generator/: Bresenham.cpp  Bresenham.h  DigitalDifferentialAnalyzer.cpp  DigitalDifferentialAnalyzer.h
src/algo/util/: TriangleBarycentric.h
src/camera/: Culling.h  DepthCamera.cpp  DepthCamera.h  FlatShadingCamera.cpp  FlatShadingCamera.h  PointScannerCamera.cpp  PointScannerCamera.h  RasterisationCamera.h  RasterisationScanner.h  WireframeCamera.cpp  WireframeCamera.h
src/debug/: Debug.h
src/filler/: DepthFiller.h  FlatShadingFiller.cpp  FlatShadingFiller.h  GouraudShadingFiller.cpp  GouraudShadingFiller.h  PhongShadingFiller.cpp  PhongShadingFiller.h
src/lens/: OrthogonalLens.cpp  OrthogonalLens.h  PerspectiveLens.cpp  PerspectiveLens.h
src/lights/: Ambient.cpp  Ambient.h  PointLight.cpp  PointLight.h  RainbowLight.cpp  RainbowLight.h  ShadowUsingZBufferLight.cpp  ShadowUsingZBufferLight.h  fanLightsAccumulator.cpp  fanLightsAccumulator.h
src/material/: FlatTexture.cpp  FlatTexture.h
src/objects/: TriangleMeshObject.cpp  TriangleMeshObject.h
src/texture/: ClampTexture.h  LinearInterpolatorTexture2D.h  MemoryTexture.h  ScanLineStoreTexture.cpp  ScanLineStoreTexture.h  TexturesDispatch.h
src/texture/film/: CMakeLists.txt  FreeImageFilm.cpp  FreeImageFilm.h  SDLFilm.cpp  SDLFilm.h  ScanLineStoreFilm.cpp  ScanLineStoreFilm.h
src/utils/: RGBConverter.cpp  RGBConverter.h  SortTriangleByZDepth.cpp  SortTriangleByZDepth.h  StopWatch.cpp  StopWatch.h
test/: Film_test.cpp  Film_test.h  FreeImageFile_test.cpp  FreeImageFilm_test.cpp  Makefile  fanTriple_test  fanTriple_test.cpp  fanVector3_test.cpp  fanVector_test.cpp
test/assert/: cube.ply  fanLens.ply  plane.ply
test/sample/cube/: CMakeLists.txt  Makefile  main.cpp
test/sample/model_viewer/: CMakeLists.txt  Makefile  main.cpp
test/sample/randomize_terrain/: Makefile  PointGenerator.cpp  PointGenerator.h  QuadTree.cpp  QuadTree.h  main.cpp
test/sample/shared_code/: CMakeLists.txt  LoadFile.cpp  LoadFile.h  RenderLoop.h
test/unittest/: Camera_test.cpp  Camera_test.h  Film_test.cpp  Film_test.h  Makefile  OrthogonalLens_test.cpp  fanMatrix_test.cpp  fanVector3_test.cpp
test/unittest/algo/clip/: CohenSutherland_test.cpp  EdgeCode_test.cpp
test/unittest/algo/rasterize/: fanLineGenerator_test.cpp  fanLineGenerator_test.h  fanScanLineGenerator_test.cpp
test/unittest/algo/util/: TriangleBarycentric_test.cpp
test/unittest/texture/: ClampTexture_test.cpp  MemoryTexture_test.cpp  ScanLineStoreTexture_test.cpp
test/unittest/texture/film/: ScanLineStoreFilm_test.cpp
